--- a/package.json
+++ b/package.json
@@ -20,13 +20,10 @@
   "dependencies": {
     "axios": "^0.18.1",
     "body-parser": "^1.17.1",
+    "cron": "^1.8.2",
     "debug": "^3.1.0",
     "dotenv": "^4.0.0",
     "express": "^4.15.2",
-    "knex": "^0.20.13",
-    "moment": "^2.24.0",
-    "moment-timezone": "^0.5.28",
-    "mysql": "^2.18.1",
     "tsscmp": "^1.0.6"
   },
   "devDependencies": {
