--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "DEBUG=slash-command-template node src/index.js",
-    "dev": "nodemon src/index.js"
+    "dev": "node index.js"
   },
   "authors": [
     "Sachin Ranchod <opensource@slack.com>",
